--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: "Itzel Zarate"
+title: "Itzel´s Blog"
 author: "Itzel Zarate"
 description: "Itzel´s Blog" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-# email: "example@mail.com"
+email: "izaratez@outlook.com"
 # twitter_username: "twitteruser"
 github_username: "itzelzarate"
 linkedin_username: "zarateitzel"
